[gd_scene load_steps=6 format=3 uid="uid://bjkgawg84pykg"]

[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="1_1ceqg"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_jkh7s"]
[ext_resource type="PackedScene" uid="uid://bvhm4flqxhlho" path="res://ui/resource_ui.tscn" id="2_2jvwp"]
[ext_resource type="PackedScene" uid="uid://bgrtyh0yobx4r" path="res://ui/action_button/action_button.tscn" id="4_53yts"]
[ext_resource type="Texture2D" uid="uid://cn2jc1ujaotbb" path="res://assets/icons/focus.png" id="7_87gkt"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkh7s")

[node name="ResourceUI" parent="." instance=ExtResource("2_2jvwp")]
layout_mode = 1

[node name="MoveUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveJoystick" parent="MoveUI" instance=ExtResource("1_1ceqg")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = -300.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0

[node name="RotateJoystick" parent="MoveUI" instance=ExtResource("1_1ceqg")]
layout_mode = 1
offset_top = -300.0
offset_bottom = 0.0
joystick_mode = 1
use_input_actions = false

[node name="InteractButton" parent="MoveUI" instance=ExtResource("4_53yts")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -247.0
offset_right = 99.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("7_87gkt")
flat = true
